[FR] Template Selections #147 - fixed bug new selections not recognized connection to app, clean up code, make add button smaller

--- a/src/app/pages/apps/components/edit/form/selections/selection.component.scss
+++ b/src/app/pages/apps/components/edit/form/selections/selection.component.scss
@@ -24,7 +24,8 @@
       }
 
       .selection-tile.create {
-        width: 100px;
+        width: 80px;
+        height: 80px;
         box-shadow: none;
         border: 1px dashed #E6E6E6;
       }
