--- a/src/app/pages/apps/components/template-selections/components/create/create.component.scss
+++ b/src/app/pages/apps/components/template-selections/components/create/create.component.scss
@@ -1,10 +1,10 @@
 :host {
+
     display: flex;
     flex-direction: column;
-
+    align-self: center;
 
     .create {
-        flex: 1;
         display: flex;
         justify-content: center;
         align-items: center;
